clipped image project header, sticky projects, SEO fix

--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,7 @@ code {
 }
 
 main {
-  overflow: hidden;
+  /* overflow: hidden; */
   margin-top: 4.5rem;
 }
 
